librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Gets channel sweep signal end frequency.\n @param channel Channel A or B for witch we want to get frequency.\n @param frequency Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetSweepEndFreq(
        channel: rp_channel_t,
        frequency: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel signal phase. This shifts the signal in time.\n @param channel Channel A or B for witch we want to set phase.\n @param phase Phase in degrees of the generated signal. From 0 deg to 180 deg.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenPhase(channel: rp_channel_t, phase: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets channel signal phase.\n @param channel Channel A or B for witch we want to get phase.\n @param phase Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetPhase(channel: rp_channel_t, phase: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel signal waveform. This determines how the signal looks.\n @param channel Channel A or B for witch we want to set waveform type.\n @param form Wave form of the generated signal [SINE, SQUARE, TRIANGLE,\n SAWTOOTH, PWM, DC, ARBITRARY, SWEEP].\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenWaveform(channel: rp_channel_t, type_: rp_waveform_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets channel signal waveform.\n @param channel Channel A or B for witch we want to get waveform.\n @param type Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetWaveform(
        channel: rp_channel_t,
        type_: *mut rp_waveform_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the generation mode for the sweep signal.\n @param channel Channel A or B for witch we want to set waveform type.\n @param mode Mode of the generated signal [RP_GEN_SWEEP_MODE_LINEAR,\n RP_GEN_SWEEP_MODE_LOG].\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenSweepMode(
        channel: rp_channel_t,
        mode: rp_gen_sweep_mode_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the generation mode for the sweep signal.\n @param channel Channel A or B for witch we want to get waveform.\n @param mode Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetSweepMode(
        channel: rp_channel_t,
        mode: *mut rp_gen_sweep_mode_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the direction of frequency change for sweep.\n @param channel Channel A or B for witch we want to set waveform type.\n @param mode Wave form of the generated signal [RP_GEN_SWEEP_DIR_NORMAL,\n RP_GEN_SWEEP_DIR_UP_DOWN].\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenSweepDir(channel: rp_channel_t, mode: rp_gen_sweep_dir_t)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the direction of frequency change for sweep.\n @param channel Channel A or B for witch we want to get waveform.\n @param mode Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetSweepDir(
        channel: rp_channel_t,
        mode: *mut rp_gen_sweep_dir_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets user defined waveform.\n @param channel Channel A or B for witch we want to set waveform.\n @param waveform Use defined wave form, where min is -1V an max is 1V.\n @param length Length of waveform.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenArbWaveform(
        channel: rp_channel_t,
        waveform: *mut f32,
        length: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets user defined waveform.\n @param channel Channel A or B for witch we want to get waveform.\n @param waveform Pointer where waveform will be returned.\n @param length Pointer where waveform length will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetArbWaveform(
        channel: rp_channel_t,
        waveform: *mut f32,
        length: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets duty cycle of PWM signal.\n @param channel Channel A or B for witch we want to set duty cycle.\n @param ratio Ratio betwen the time when signal in HIGH vs the time when\n signal is LOW.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenDutyCycle(channel: rp_channel_t, ratio: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets duty cycle of PWM signal.\n @param channel Channel A or B for witch we want to get duty cycle.\n @param ratio Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetDutyCycle(channel: rp_channel_t, ratio: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets generation mode.\n @param channel Channel A or B for witch we want to set generation mode.\n @param mode Type of signal generation (CONTINUOUS, BURST, STREAM).\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenMode(channel: rp_channel_t, mode: rp_gen_mode_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets generation mode.\n @param channel Channel A or B for witch we want to get generation mode.\n @param mode Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetMode(channel: rp_channel_t, mode: *mut rp_gen_mode_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets number of generated waveforms in a burst.\n @param channel Channel A or B for witch we want to set number of generated\n waveforms in a burst.\n @param num Number of generated waveforms. If -1 a continuous signal will be\n generated.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenBurstCount(
        channel: rp_channel_t,
        num: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets number of generated waveforms in a burst.\n @param channel Channel A or B for witch we want to get number of generated\n waveforms in a burst.\n @param num Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetBurstCount(
        channel: rp_channel_t,
        num: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the value to be set at the end of the generated signal in burst mode.\n @param channel Channel A or B for witch we want to set number of generated\n waveforms in a burst.\n @param amplitude Amplitude level at the end of the signal (Volt).\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenBurstLastValue(channel: rp_channel_t, amlitude: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the value to be set at the end of the generated signal in burst mode.\n @param channel Channel A or B for witch we want to get number of generated\n waveforms in a burst.\n @param amplitude Amplitude where value will be returned (Volt).\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetBurstLastValue(
        channel: rp_channel_t,
        amlitude: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets number of burst repetitions. This determines how many bursts will be\n generated.\n @param channel Channel A or B for witch we want to set number of burst\n repetitions.\n @param repetitions Number of generated bursts. If 0x10000, infinite bursts\n will be generated.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenBurstRepetitions(
        channel: rp_channel_t,
        repetitions: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets number of burst repetitions.\n @param channel Channel A or B for witch we want to get number of burst\n repetitions.\n @param repetitions Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetBurstRepetitions(
        channel: rp_channel_t,
        repetitions: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the time/period of one burst in micro seconds. Period must be equal or\n greater then the time of one burst. If it is greater than the difference will\n be the delay between two consequential bursts.\n @param channel Channel A or B for witch we want to set burst period.\n @param period Time in micro seconds.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenBurstPeriod(channel: rp_channel_t, period: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the period of one burst in micro seconds.\n @param channel Channel A or B for witch we want to get burst period.\n @param period Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetBurstPeriod(channel: rp_channel_t, period: *mut u32) -> ::std::os::raw::c_int;
}
